# UnovaApi

./: MANIFEST.in  README.md  README.rst  drawCaptchas.py  requirements.txt  setup.cfg  unoSession.py  unovaApi.py
UnovaApi/: item_data.csv  pyproject.toml  setup.cfg  unovaApi.py  unova_api.py
UnovaApi.egg-info/: PKG-INFO
