[metadata]
name = UnovaApi
version = 0.0.1
author = Alexander McIntosh
author_email = mcintoshalexander80@gmail.com
description = Interface with Unovarpg with python
long_description = file: README.md
url = https://github.com/Alexcmad/UnovaApi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MID License
    Operating System :: Windows

[options]
packages = find:
python_requires = >=3.7
include_package_data = True